Fikset feil link i bunnbar

--- a/Nettside/WebContent/JavaEksempler/DoWhile.html
+++ b/Nettside/WebContent/JavaEksempler/DoWhile.html
@@ -152,7 +152,7 @@ public class DoWhile {
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="While-Lokker.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="Tabeller.html">Neste Eksempel</a></div>
 	</div>
 </body>
