--- a/Nettside/WebContent/JavaEksempler/EgneMetoder.html
+++ b/Nettside/WebContent/JavaEksempler/EgneMetoder.html
@@ -92,7 +92,7 @@ System.out.println(EksterneMetoder.oppHoy(5, 3));
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Tabeller.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="Objekter.html">Neste Eksempel</a></div>
 	</div>
 </body>
