--- a/Nettside/WebContent/JavaEksempler/Flerdimensjonelle_Tabeller.html
+++ b/Nettside/WebContent/JavaEksempler/Flerdimensjonelle_Tabeller.html
@@ -81,8 +81,8 @@ lagHendelse();
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Objekter.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Neste Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Neste Eksempel</a></div>
 	</div>
 </body>
 </html>
