--- a/Nettside/WebContent/JavaEksempler/For.html
+++ b/Nettside/WebContent/JavaEksempler/For.html
@@ -95,7 +95,7 @@ for (int j = 1; j &lt;= antallLinjer; j++){
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="If.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="Switch.html">Neste Eksempel</a></div>
 	</div>
 </body>
