--- a/Nettside/WebContent/JavaEksempler/If.html
+++ b/Nettside/WebContent/JavaEksempler/If.html
@@ -122,7 +122,7 @@ else if (tall &lt; hemmeligTall) {
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Kommentarer.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="For.html">Neste Eksempel</a></div>
 	</div>
 </body>
