--- a/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
+++ b/Nettside/WebContent/JavaEksempler/JavaIntroduksjon.html
@@ -103,7 +103,7 @@ public class HelloWorld {
 		</p>
 	</div>
 	<div class="bottom_menu">
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Forrige Eksempel</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Forrige Eksempel</a></div>
   		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="EnkelInteraksjon.html">Neste Eksempel</a></div>
 	</div>
