--- a/Nettside/WebContent/JavaEksempler/Objekter.html
+++ b/Nettside/WebContent/JavaEksempler/Objekter.html
@@ -150,7 +150,7 @@ System.out.println(youtube.likURL(wikipedia));
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="EgneMetoder.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="Flerdimensjonelle_Tabeller.html">Neste Eksempel</a></div>
 	</div>
 </body>
