--- a/Nettside/WebContent/JavaEksempler/Switch.html
+++ b/Nettside/WebContent/JavaEksempler/Switch.html
@@ -57,7 +57,7 @@ System.out.println("Prisen er: " + pris);
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="For.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="While-Lokker.html">Neste Eksempel</a></div>
 	</div>
 </body>
