--- a/Nettside/WebContent/JavaEksempler/Tabeller.html
+++ b/Nettside/WebContent/JavaEksempler/Tabeller.html
@@ -108,7 +108,7 @@ System.out.print("Tredje verdi i tab: " + tab[2]);
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="DoWhile.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="EgneMetoder.html">Neste Eksempel</a></div>
 	</div>
 </body>
