--- a/Nettside/WebContent/JavaEksempler/While-Lokker.html
+++ b/Nettside/WebContent/JavaEksempler/While-Lokker.html
@@ -125,7 +125,7 @@ public class WhileLokker {
 	</div>
 	<div class="bottom_menu">
   		<div class="bottom_menu_element"><a href="Switch.html">Forrige Eksempel</a></div>
-  		<div class="bottom_menu_element"><a href="JavaEksempler.html">Alle Eksempler</a></div>
+  		<div class="bottom_menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="bottom_menu_element"><a href="DoWhile.html">Neste Eksempel</a></div>
 	</div>
 </body>
