--- a/Nettside/WebContent/JavaEksempler/JavaForside.html
+++ b/Nettside/WebContent/JavaEksempler/JavaForside.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="menu">
   		<div class="menu_element"><a href="../om_oss.html">Om Oss</a></div>
+  		<div class="menu_element"><a href="JavaForside.html">Alle Eksempler</a></div>
   		<div class="menu_element"><a href="../ProsjektBeskrivelse.html">Om Prosjektet</a></div>
 	</div>
 	<div class="container">
@@ -21,7 +22,6 @@
 			<div class="example_square"><a href="Switch.html">Switch</a></div>
 			<div class="example_square"><a href="While-Lokker.html">While</a></div>
 			<div class="example_square"><a href="DoWhile.html">Do While</a></div>
-			<div class="example_square"><a href="For.html">For</a></div>
 			<div class="example_square"><a href="Tabeller.html">Tabeller</a></div>
 			<div class="example_square"><a href="EgneMetoder.html">Egne Metoder</a></div>
 			<div class="example_square"><a href="Objekter.html">Objekter</a></div>
